<resources>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="earthImageDetails">Image Details:</string>
    <string name="earthImageLat">Latitude:</string>
    <string name="earthImageLong">Longitude:</string>
    <string name="zero" translatable="false">0</string>
    <string name="back_to_search">Back to Search</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="nasa_images">NASA Images</string>
    <string name="search_prompt">Enter Longitude and Latitude to search an image</string>
    <string name="enter_latitude">Enter Latitude:</string>
    <string name="latitude" translatable="false">Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="longitude" translatable="false">Longitude</string>
    <string name="search">Search</string>
    <string name="see_last_search">See Last Search</string>
    <string name="cst_2335_final_project">CST 2335 Final Project</string>
    <string name="dan_brown" translatable="false">Dan Brown</string>
    <string name="guardian_news_article_search">Guardian News Article Search</string>
    <string name="dan_dwyer" translatable="false">Dan Dwyer</string>
    <string name="nasa_image_of_the_day">NASA Image of the Day</string>
    <string name="karen_lauzon" translatable="false">Karen Lauzon</string>
    <string name="nasa_earth_imagery_database">NASA Earth Imagery database</string>
    <string name="alex_griffith" translatable="false">Alex Griffith</string>
    <string name="bbc_news_reader">BBC News Reader</string>
    <string name="welcome_to_the_nasa_earth_imagery_database">Welcome to the NASA Earth Imagery Database</string>
    <string name="new_search">New Search</string>
    <string name="view_favorites">View Favorites</string>
    <string name="guardian_news">Guardian News</string>
    <string name="image_of_day">Image of Day</string>
    <string name="earth_images">Earth Images</string>
    <string name="bbc_news">BBC News</string>
    <string name="help_message">Confused how this app works?</string>
    <string name="help">Help</string>
    <string name="nasa_earth_image_search">NASA Earth Image Search</string>
    <string name="version" translatable="false">Version 4</string>
    <string name="hide">HIDE</string>
    <string name="delete_image">Delete Image</string>
    <string name="date" translatable="false">Date:</string>
    <string name="search_new_location">Search New Location</string>
    <string name="return_to_home_screen">Return to home screen</string>
    <string name="app_name">Final Project</string>
    <string name="favouritesButton">Favourites</string>
    <string name="mainMenuButton">Back To Menu</string>
    <string name="backToListButton">Back To BBC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleText">Title</string>
    <string name="ifFavourited">** Favourited **</string>
    <string name="artSelected">"Article selected is: "</string>
    <string name="howToUse">How to use the BBC Reader</string>
    <string name="allArtLoaded">All articles loaded from BBC</string>
    <string name="lastArticleButton">Last Article Viewed</string>
    <string name="helpButton">Help</string>
    <string name="helpDialog">
        Tap on an article to view details.
        \n\nTap and hold an article to add to your favourites list.
        \n\n\'Favourites\' will take you to your list of favourited articles.
        \n\n\'Last Article Viewed\' will take you to the last article you looked at.
        \n\nYou can click the link in the articles to go to the BBC webpage for that news article
    </string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="wantToFavourite">Do you want to favourite this?</string>
    <string name="cancel">Cancel</string>
    <string name="wantToUnfavourite">Do you want to remove this from favourites?</string>
    <string name="addFavSnackbar">\tArticle Added To Favourites List</string>
    <string name="favNote">Enter a note about this article</string>


    <string name="text_guardian">The Guardian News Search Engine</string>
    <string name="help_title">How to use</string>
    <string name="version_title">Click for version</string>
    <string name="help_version">Version: 1 </string>
    <string name="author_title">Author</string>
    <string name="got_it">Got It</string>
    <string name="author_text">CST 2335 Guardian News Article Search Dan Brown</string>
    <string name="author_exit">Return</string>
    <string name="type_news_title">Type in Query to search</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="article_delete_confirm">Confirm</string>
    <string name="article_save_confirm">Confirm</string>
    <string name="saved">added to favorites</string>
    <string name="add">added to favorites</string>
    <string name="searchh">search</string>
    <string name="url">URL:</string>
    <string name="save">Add to Favorites</string>
    <string name="delete">Delete</string>
    <string name="remove">removed from favorites</string>
    <string name="section">Section Name:</string>
    <string name="article_details">Article Details</string>
    <string name="article_delete">Confirm Deletion</string>
    <string name="article_save">Confirm Adding to Favorites</string>
    <string name="article_delete_cancel">Cancel</string>
    <string name="article_save_cancel">Nevermind</string>
    <string name="drawerSearch">CLICK HERE TO SEARCH</string>
    <string name="drawerSave">CLICK HERE TO SEE YOUR FAVORITES</string>


    <string name="help_text">
        Type in a news article term to search for it
         \n\ Click on a news article to view its details
        \n\ Click on Save to add it to your favorites
        \n\ Click on the drawer icon to select search or your Favorites
        \n\ Click on a news articles URL to goto its page
    </string>
    <string name="MainMenu">Main Menu</string>




    <string name="help_popup">This is a test help message</string>
    <string name="search_hint">Enter date here</string>
    <string name="search_favs_button">Search Favourites</string>
    <string name="find_images_button">Find New Images</string>
    <string name="list_alert_message">Select an Option</string>
    <string name="list_alert_positive">View</string>
    <string name="list_alert_negative">Delete</string>
    <string name="list_alert_neutral">Cancel</string>
    <string name="list_alert_canceled">Canceled</string>
    <string name="list_alert_confirm_delete">Are you sure you wish to delete?</string>
    <string name="confirm">Yes</string>
    <string name="deny">No</string>
    <string name="placeholder">Placeholder</string>

</resources>
