<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/guardianIcon"
            android:icon="@drawable/guardian"
            android:orderInCategory="100"
            android:title="@string/guardian_news"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nasaImageIcon"
            android:icon="@drawable/image_of_day"
            android:orderInCategory="200"
            android:title="@string/image_of_day"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nasaEarthIcon"
            android:icon="@drawable/earth"
            android:orderInCategory="300"
            android:title="@string/earth_images"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/bbcNewsIcon"
            android:icon="@drawable/bbc"
            android:orderInCategory="400"
            android:title="@string/bbc_news"
            app:showAsAction="always" />
    </group>

    <item
        android:orderInCategory="600"
        android:title="@string/help_message">
        <menu>
            <item
                android:id="@+id/helpIcon"
                android:icon="@drawable/help"
                android:orderInCategory="400"
                android:title="@string/help"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>