<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/HomeIcon"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="100"
        android:title="@string/return_to_home_screen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/SearchIcon"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="200"
        android:title="@string/search_new_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/FavIcon"
        android:icon="@android:drawable/btn_star"
        android:orderInCategory="300"
        android:title="@string/save_to_favorites"
        app:showAsAction="ifRoom" />

</menu>