<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_bar"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/nav_toolbar"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/find_images_button"
            android:text="@string/find_images_button"
            android:textSize="12pt"
            android:layout_alignParentTop="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_search_text"
            android:hint="@string/search_hint"
            android:layout_below="@+id/find_images_button"
            android:layout_toStartOf="@id/search_favs_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_favs_button"
            android:text="@string/search_favs_button"
            android:layout_below="@+id/find_images_button"
            android:layout_alignParentRight="true"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_favs_list"
            android:layout_below="@id/image_search_text">

        </ListView>

    </RelativeLayout>

</LinearLayout>