<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="#FFFFFF" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/WelcomeMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:text="@string/welcome_to_the_nasa_earth_imagery_database"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnNewSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/WelcomeMessage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:text="@string/new_search" />

            <Button
                android:id="@+id/btnViewFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnNewSearch"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:text="@string/view_favorites" />

            <Button
                android:id="@+id/btnLastSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnViewFav"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:text="@string/see_last_search" />
        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/image_nav_header"
            app:menu="@menu/earth_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>