<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="#FFFFFF" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/imageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_below="@id/dateValue"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/nasa_images"
                android:visibility="invisible"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/progressBar"
                android:layout_below="@id/imageView"
                android:layout_margin="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/descValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:isScrollContainer="true"
                android:textSize="15sp" /></ScrollView>

            <Button
                android:id="@+id/btnBackToSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnSaveFav"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:text="@string/back_to_search" />

            <Button

                android:id="@+id/btnSaveFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/save_to_favorites" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnBackToSearch"
                android:layout_centerHorizontal="true"
                android:progress="5" />
        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/earth_nav_header"
            app:menu="@menu/earth_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>